--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.mailinglist:focus {
+outline: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
