--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -1,471 +1,154 @@
 body {
-    padding: 0px;
-    margin: 0px;
-  }
-  
-  .world {
-    overflow: hidden;
-    position: relative;
-    /* height: 100vh; */
-    height: 80.4vh;
-    background: #d54f2f;
-    /* background: #6ca0a2; */
-    background: radial-gradient(ellipse at center, #e58e0d 22%, #d54f2f 100%);
-  }
-  
-  .sea {
-    position: absolute;
-    top: 58vh;
-    opacity: 1;
-    width: 0;
-    height: 0;
-    border-top: 2vh solid transparent;
-    border-right: 50vw solid #459693;
-    border-bottom: 0px solid transparent;
-    right: 0;
-  }
-  
-  .sand {
-    background: #f0e6e4;
-    background: linear-gradient(to bottom, #e5d3ca 0%, #f1e8e4 15%, #f2e9e7 100%);
-    width: 100vw;
-    height: 40vh;
-    position: absolute;
+	background: #00b4ff;
+	color: #333;
+	font: 100% Arial, Sans Serif;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
+
+#background-wrap {
     bottom: 0;
-  }
-  
-  .sand-shadow {
-    position: absolute;
-    top: 59vh;
-    opacity: 1;
-    width: 0;
-    height: 0;
-    border-top: 2vh solid transparent;
-    border-right: 49vw solid #cbb7a9;
-    border-bottom: 0px solid transparent;
-    right: 0;
-    transform: rotate(0.3deg);
-  }
-  
-  .rocks {
-    position: absolute;
-    border-top: 10vh solid transparent;
-    border-left: 50vw solid #667e86;
-    border-bottom: 0px solid transparent;
-    left: 0.5vw;
-    top: 50vh;
-  }
-  
-  .rocks:before {
-    position: absolute;
-    content: "";
-    display: block;
-    border-top: 2vh solid transparent;
-    border-right: 1vw solid #667e86;
-    border-bottom: 0px solid transparent;
-    left: -51vw;
-    top: -10vh;
-  }
-  
-  .rocks:after {
-    position: absolute;
-    width: 0.5vw;
-    height: 8vh;
-    background: #667e86;
-    content: " ";
-    display: block;
-    top: -8vh;
-    left: -50.5vw;
-  }
-  
-  .rock-tops-1 {
-    position: absolute;
-    border-top: 5vw solid transparent;
-    border-left: 5vw solid transparent;
-    border-bottom: 4vh solid #667e86;
-    border-right: 10vw solid transparent;
-    left: 30vw;
-    bottom: 40vh;
-  }
-  
-  .rock-tops-2 {
-    position: absolute;
-    border-top: 5vw solid transparent;
-    border-left: 20vw solid transparent;
-    border-bottom: 10vh solid #667e86;
-    border-right: 20vw solid transparent;
-    left: 0vw;
-    bottom: 40vh;
-  }
-  
-  .cloud {
-    transform: skew(-20deg);
-  }
-  
-  .cloud-1 {
-    position: absolute;
-    top: 15vh;
-    left: 18vw;
-    width: 8vw;
-    height: 0.2vw;
+	left: 0;
+	padding-top: 50px;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: -1;
+}
+
+/* KEYFRAMES */
+
+@-webkit-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@-moz-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+	-webkit-animation: animateCloud 35s linear infinite;
+	-moz-animation: animateCloud 35s linear infinite;
+	animation: animateCloud 35s linear infinite;
+	
+	-webkit-transform: scale(0.65);
+	-moz-transform: scale(0.65);
+	transform: scale(0.65);
+}
+
+.x2 {
+	-webkit-animation: animateCloud 20s linear infinite;
+	-moz-animation: animateCloud 20s linear infinite;
+	animation: animateCloud 20s linear infinite;
+	
+	-webkit-transform: scale(0.3);
+	-moz-transform: scale(0.3);
+	transform: scale(0.3);
+}
+
+.x3 {
+	-webkit-animation: animateCloud 30s linear infinite;
+	-moz-animation: animateCloud 30s linear infinite;
+	animation: animateCloud 30s linear infinite;
+	
+	-webkit-transform: scale(0.5);
+	-moz-transform: scale(0.5);
+	transform: scale(0.5);
+}
+
+.x4 {
+	-webkit-animation: animateCloud 18s linear infinite;
+	-moz-animation: animateCloud 18s linear infinite;
+	animation: animateCloud 18s linear infinite;
+	
+	-webkit-transform: scale(0.4);
+	-moz-transform: scale(0.4);
+	transform: scale(0.4);
+}
+
+.x5 {
+	-webkit-animation: animateCloud 25s linear infinite;
+	-moz-animation: animateCloud 25s linear infinite;
+	animation: animateCloud 25s linear infinite;
+	
+	-webkit-transform: scale(0.55);
+	-moz-transform: scale(0.55);
+	transform: scale(0.55);
+}
+
+/* OBJECTS */
+
+.cloud {
+	background: #fff;
+	background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+	background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+	
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
+	
+	-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+	height: 120px;
+	position: relative;
+	width: 350px;
+}
+
+.cloud:after, .cloud:before {
     background: #fff;
-    opacity: 0.2;
-  }
-  
-  .cloud-large {
-    position: absolute;
-    width: 10vw;
-    height: 0.5vw;
-    background: #fff;
-    opacity: 0.2;
-  }
-  .cloud-large:before {
-    content: " ";
-    display: block;
-    height: 1.5vh;
-    width: 40%;
-    background: #fff;
-    position: absolute;
-    top: -1.5vh;
-    left: 20%;
-  }
-  .cloud-large:after {
-    content: " ";
-    display: block;
-    height: 1.5vh;
-    width: 40%;
-    background: #fff;
-    position: absolute;
-    top: -1.5vh;
-    left: 80%;
-  }
-  .cloud-large span {
-    display: block;
-    height: 1vh;
-    background: #fff;
-    width: 100%;
-    bottom: -1vh;
-    left: 60%;
-    position: absolute;
-  }
-  
-  .cloud-2 {
-    top: 30vh;
-    right: 10vw;
-  }
-  
-  .cloud-3 {
-    top: 40vh;
-    right: 40vw;
-    transform: scale(0.5) skew(-20deg);
-  }
-  
-  .cloud-4 {
-    top: 10vh;
-    left: 20vw;
-    transform: scale(0.7) skew(-20deg);
-  }
-  
-  .foreground {
-    position: absolute;
-    border-top: 0vw solid transparent;
-    border-left: 30vw solid transparent;
-    border-bottom: 15vh solid #cdbaad;
-    border-right: 0vw solid transparent;
-    right: 0vw;
-    bottom: 0vh;
-  }
-  
-  .plant {
-    position: absolute;
-    overflow: hidden;
-  }
-  
-  .plant-1 {
-    bottom: -20px;
-    right: 5%;
-    height: 5vw;
-    width: 6vw;
-  }
-  
-  .plant-2 {
-    bottom: -20px;
-    right: 4%;
-    transform: scale(0.8);
-    height: 5vw;
-    width: 6vw;
-  }
-  
-  .plant-leaf {
-    background: #1e262e;
-    width: 20%;
-    height: 160%;
-    position: absolute;
-    border-radius: 100%;
-    left: 40%;
-  }
-  
-  .leaf-2 {
-    transform: rotate(25deg);
-  }
-  
-  .leaf-3 {
-    transform: rotate(50deg) translateY(10%);
-    top: 10%;
-  }
-  
-  .leaf-4 {
-    transform: rotate(-25deg);
-  }
-  
-  .leaf-5 {
-    transform: rotate(-50deg) translateY(10%);
-    top: 10%;
-  }
-  
-  .twelve-point-star {
-    height: 5vw;
-    width: 5vw;
-    background: #1e262e;
-    position: absolute;
-    bottom: -3vw;
-    right: 10%;
-  }
-  
-  .twelve-point-star:before {
-    height: 5vw;
-    width: 5vw;
-    background: #1e262e;
-    content: "";
-    position: absolute;
-    transform: rotate(30deg);
-  }
-  
-  .twelve-point-star:after {
-    height: 5vw;
-    width: 5vw;
-    background: #1e262e;
-    content: "";
-    position: absolute;
-    /* Rotate */
-    transform: rotate(-30deg);
-  }
-  
-  .large-leaf {
-    width: 100vw;
-    height: 100vw;
-    background: #1e262e;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    left: -50%;
-  }
-  
-  .large-leaf-box {
-    position: absolute;
-    width: 50vw;
-    height: 2vw;
-    overflow: hidden;
-    bottom: 10%;
-    left: -25vw;
-    transform: rotate(-70deg);
-  }
-  
-  .large-leaf-2 {
-    width: 100vw;
-    height: 100vw;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    left: -50%;
-  }
-  
-  .large-leaf-box-2 {
-    position: absolute;
-    width: 50vw;
-    height: 2vw;
-    overflow: hidden;
-    bottom: -5%;
-    left: -25vw;
-    transform: rotate(-40deg);
-  }
-  
-  .large-leaf-3 {
-    width: 100vw;
-    height: 100vw;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    left: -50%;
-  }
-  
-  .large-leaf-box-3 {
-    position: absolute;
-    width: 50vw;
-    height: 1vw;
-    overflow: hidden;
-    bottom: -5%;
-    left: -26vw;
-    transform: rotate(-60deg);
-  }
-  
-  .large-leaf-4 {
-    width: 100vw;
-    height: 100vw;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    left: -50%;
-  }
-  
-  .large-leaf-box-4 {
-    position: absolute;
-    width: 50vw;
-    height: 1vw;
-    overflow: hidden;
-    bottom: -5%;
-    left: -24vw;
-    transform: rotate(-20deg);
-  }
-  
-  .reed {
-    border-top: 0.1vw solid transparent;
-    border-left: 0.1vw solid transparent;
-    border-bottom: 10vw solid #1e262e;
-    border-right: 0.1vw solid transparent;
-    position: absolute;
-    right: 3vw;
-    bottom: -1vw;
-    transform: rotate(-20deg);
-  }
-  .reed.reed-2 {
-    transform: rotate(-10deg) scale(2);
-    right: 1vw;
-  }
-  .reed span {
-    display: block;
-    width: 0;
-    height: 0;
-    border-top: 0.08vw solid transparent;
-    border-left: 1vw solid #1e262e;
-    border-bottom: 0.08vw solid transparent;
-    position: absolute;
-    transform: rotate(-30deg);
-  }
-  .reed span.left {
-    transform: rotate(-160deg);
-    left: -1.1vw;
-  }
-  .reed span.one {
-    bottom: -7vw;
-  }
-  .reed span.two {
-    bottom: -6vw;
-  }
-  .reed span.three {
-    bottom: -5vw;
-  }
-  .reed span.four {
-    bottom: -4vw;
-  }
-  .reed span.five {
-    bottom: -3vw;
-  }
-  .reed span.six {
-    bottom: -2vw;
-  }
-  
-  .large-leaf-5 {
-    width: 80vw;
-    height: 80vw;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    right: -50%;
-  }
-  
-  .large-leaf-box-5 {
-    position: absolute;
-    width: 35vw;
-    height: 1vw;
-    overflow: hidden;
-    bottom: 0%;
-    right: -15vw;
-    transform: rotate(40deg);
-  }
-  
-  .large-leaf-6 {
-    width: 80vw;
-    height: 80vw;
-    background: linear-gradient(to bottom, #27303a 0%, #4b627f 13%, #1d252c 100%);
-    border-radius: 100%;
-    position: absolute;
-    right: -50%;
-  }
-  
-  .large-leaf-box-6 {
-    position: absolute;
-    width: 35vw;
-    height: 1vw;
-    overflow: hidden;
-    bottom: 0%;
-    right: -13vw;
-    transform: rotate(20deg);
-  }
-  
-  .surfboard {
-    width: 1.5vw;
-    height: 3vw;
-    position: absolute;
-    left: 60%;
-    bottom: 35%;
-    overflow: hidden;
-  }
-  .surfboard span.board {
-    display: block;
-    background: #fff;
-    width: 100%;
-    height: 150%;
-    border-radius: 50%;
-    position: relative;
-    top: 0%;
-  }
-  .surfboard span.shadow {
-    display: block;
-    height: 5%;
-    width: 110%;
-    position: absolute;
-    background: linear-gradient(to bottom, #bda391 0%, #f0e6e4 100%);
-    bottom: 0;
-    left: 0%;
-    filter: blur(1px);
-  }
-  
-  .boat {
-    opacity: 0.7;
-    width: 2vw;
-    height: 1vw;
-    position: absolute;
-    right: 10%;
-    bottom: 42vh;
-  }
-  .boat .sail.left {
-    width: 0;
-    height: 0;
-    border-right: 0px solid transparent;
-    border-left: 0.5vw solid transparent;
-    border-bottom: 1vw solid #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  .boat .sail.right {
-    width: 0;
-    height: 0;
-    border-left: 0px solid transparent;
-    border-right: 1.2vw solid transparent;
-    border-bottom: 1vw solid #fff;
-    position: absolute;
-    top: 0;
-    left: 0.6vw;
-  }
+	content: '';
+	position: absolute;
+	z-indeX: -1;
+}
+
+.cloud:after {
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
+
+	height: 100px;
+	left: 50px;
+	top: -50px;
+	width: 100px;
+}
+
+.cloud:before {
+	-webkit-border-radius: 200px;
+	-moz-border-radius: 200px;
+	border-radius: 200px;
+
+	width: 180px;
+	height: 180px;
+	right: 50px;
+	top: -90px;
+}
