--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
-  font-family: Julius Sans One, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'monospace !important';
+  /* font-family: 'monospace', Julius Sans One, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 900;
+  font-weight: 900; */
 }
 
 code {
