--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -115,9 +115,9 @@ body {
 	-moz-border-radius: 100px;
 	border-radius: 100px;
 	
-	-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	/* -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1); */
 
 	height: 120px;
 	position: relative;
