--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,3 @@
-/* body {font-family: Arial, Helvetica, sans-serif;} */
-/* * {box-sizing: border-box;} */
 
 label{
   text-align: left;
@@ -32,15 +30,26 @@ input[type=submit] {
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
+  border-bottom: 8px solid green;
+  height: 47px;
   cursor: pointer;
 }
 
 input[type=submit]:hover {
   background-color: #45a049;
+  height: 44px;
+  margin-top: 4px;
+  border-bottom: 6px solid green;
+  transition: all .1s ease-in;
 }
+
 
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+.submit-hover {
+  background: red;
 }
