--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,4 +1,3 @@
-
 label{
   text-align: left;
 }
@@ -43,6 +42,16 @@ input[type=submit]:hover {
   transition: all .1s ease-in;
 }
 
+
+input[type=submit]:disabled {
+  background-color: #7f9781;
+  height: 44px;
+  margin-top: 4px;
+  border-bottom: 6px solid rgb(67, 79, 67);
+  transition: all 0.1s ease-in;
+  cursor: not-allowed; /* Add this to change the cursor to 'not-allowed' */
+  /* Add any additional styles you want for a disabled, hovered button */
+}
 
 .container {
   border-radius: 5px;
